--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = public
 	url = git@github.com:hmorl/hmorl.github.io.git
 	branch = master
+[submodule "hmorl.github.io"]
+	path = hmorl.github.io
+	url = https://github.com/hmorl/hmorl.github.io
